--- a/src/View.form
+++ b/src/View.form
@@ -5,9 +5,7 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties>
-      <enabled value="true"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
       <component id="4cfcb" class="javax.swing.JTextField" binding="msg">
